--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
                 <artifactId>lombok</artifactId>
                 <version>1.18.12</version>
             </dependency>
+            <!--shiro-->
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-spring</artifactId>
+                <version>1.5.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
