--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -14,6 +14,8 @@
 
     <modules>
         <module>springboot-quartz</module>
+        <module>springboot-shiro</module>
+        <module>springboot-mqtt</module>
     </modules>
 
 </project>
