--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <!--子模块-->
     <modules>
         <module>springboot</module>
+        <module>spring-proxy</module>
     </modules>
 
     <properties>
