--- a/disign-patterns/pom.xml
+++ b/disign-patterns/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>disign-patterns</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>strategy</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
